This should fix the word overflow bug definitively

--- a/app/assets/stylesheets/wiki.css
+++ b/app/assets/stylesheets/wiki.css
@@ -81,6 +81,5 @@ a.navbar-offset {
 
 .wk-wysiwyg {
   background: white;
-  word-break: break-all;
 }
 
